--- a/src/NHibernate/NHibernate.csproj
+++ b/src/NHibernate/NHibernate.csproj
@@ -5,7 +5,7 @@
     <Description>An object persistence library for relational databases.</Description>
     <TargetFrameworks>$(NhLibTargetFrameworks)</TargetFrameworks>
     <NoWarn>$(NoWarn);3001;3002;3003;3005;1591;419</NoWarn>
-    <SignAssembly>True</SignAssembly>
+    <SignAssembly>false</SignAssembly>
     <PublicSign Condition=" '$(OS)' != 'Windows_NT' ">true</PublicSign>
     <AssemblyOriginatorKeyFile>..\NHibernate.snk</AssemblyOriginatorKeyFile>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
@@ -41,6 +41,7 @@
     </PackageReference>
     <PackageReference Include="Antlr3.Runtime" Version="[3.5.1, 4.0)" />
     <PackageReference Include="Iesi.Collections" Version="[4.0.4, 5.0)" />
+    <PackageReference Include="LanguageExt.Core" Version="3.0.31" />
     <PackageReference Include="Remotion.Linq" Version="[2.2.0, 3.0)" />
     <PackageReference Include="Remotion.Linq.EagerFetching" Version="[2.2.0, 3.0)" />
   </ItemGroup>
